[+] Added User register

--- a/app/src/main/res/layout/activity_crear_cuenta.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta.xml
@@ -49,7 +49,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_email"
+            android:drawableStart="@drawable/org_symbol"
             android:drawablePadding="10sp"
             android:ems="10"
             android:hint="Nombre"
@@ -78,7 +78,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:background="@drawable/custom_input"
-            android:drawableStart="@drawable/ic_email"
+            android:drawableStart="@drawable/ic_key"
             android:drawablePadding="10sp"
             android:ems="10"
             android:hint="Contraseña"
