[+] add to favourites

--- a/app/src/main/res/layout/activity_event_description_as.xml
+++ b/app/src/main/res/layout/activity_event_description_as.xml
@@ -116,7 +116,7 @@
                 android:layout_width="290sp"
                 android:layout_height="70sp"
                 android:background="@drawable/button_menu"
-                android:text="GUARDAR EN FAVORITOS"
+                android:text="@string/guardar_en_favoritos"
                 android:textSize="18sp"
                 android:textColor="@color/white"
                 android:drawableStart="@drawable/ic_star"
