--- a/app/src/main/res/layout/activity_eventos_guardados_asistente.xml
+++ b/app/src/main/res/layout/activity_eventos_guardados_asistente.xml
@@ -17,202 +17,41 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0sp"
-            android:orientation="horizontal"
-            android:layout_weight="0.12"
-            android:layout_marginBottom="10sp">
+            android:layout_marginBottom="10sp"
+            android:layout_weight="0.03"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="150sp"
                 android:layout_height="match_parent"
-                android:text="MIS EVENTOS"
-                android:layout_marginRight="10sp">
+                android:layout_marginRight="10sp"
+                android:text="FEED">
 
             </TextView>
 
             <Spinner
                 android:layout_width="200sp"
-                android:layout_height="65sp">
-            </Spinner>
+                android:layout_height="match_parent"></Spinner>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="0.5"
+            android:gravity="center_horizontal">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listadoEventos"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
 
         </LinearLayout>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="1sp"
-            android:layout_weight="0.5"
-            android:layout_gravity="top">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="120sp"
-                    android:layout_marginBottom="5sp"
-                    cardview:cardBackgroundColor="@color/cardview_shadow_start_color">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="80sp"
-                            android:layout_height="75sp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="TEST">
-
-                            </TextView>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="EVENTO RANDOM #1"
-                                    android:textSize="25sp">
-
-                                </TextView>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="[ORGANIZADOR]"
-                                    android:textSize="15sp">
-
-                                </TextView>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="[FECHA]"
-                                    android:textSize="15sp">
-
-                                </TextView>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="68dp">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:padding="5sp"
-                                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing
-                                     elit. Duis luctus velit viverra elit vehicula gravida."></TextView>
-
-                            </LinearLayout>
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="120sp"
-                    android:layout_marginBottom="5sp"
-                    cardview:cardBackgroundColor="@color/cardview_shadow_start_color">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="80sp"
-                            android:layout_height="75sp">
-
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:text="TEST">
-
-                            </TextView>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="EVENTO RANDOM #1"
-                                    android:textSize="25sp">
-
-                                </TextView>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:orientation="horizontal">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="[ORGANIZADOR]"
-                                    android:textSize="15sp">
-
-                                </TextView>
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:text="[FECHA]"
-                                    android:textSize="15sp">
-
-                                </TextView>
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="68dp">
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:padding="5sp"
-                                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing
-                                     elit. Duis luctus velit viverra elit vehicula gravida."></TextView>
-
-                            </LinearLayout>
-                        </LinearLayout>
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-        </ScrollView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="1sp"
