--- a/app/src/main/res/layout/activity_modificar_perfil_asistente.xml
+++ b/app/src/main/res/layout/activity_modificar_perfil_asistente.xml
@@ -43,7 +43,7 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:background="@drawable/custom_input"
-                android:drawableStart="@drawable/ic_email"
+                android:drawableStart="@drawable/org_symbol"
                 android:drawablePadding="10sp"
                 android:ems="10"
                 android:hint="Nombre"
@@ -52,7 +52,7 @@
                 tools:ignore="NestedWeights" />
 
             <EditText
-                android:id="@+id/regiter_email"
+                android:id="@+id/register_email"
                 android:layout_width="255dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
@@ -71,10 +71,10 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:background="@drawable/custom_input"
-                android:drawableStart="@drawable/ic_email"
+                android:drawableStart="@drawable/ic_key"
                 android:drawablePadding="10sp"
                 android:ems="10"
-                android:hint="Contraseña"
+                android:hint="Contraseña actual"
                 android:inputType="textPassword"
                 android:layout_marginTop="30sp"
                 android:padding="10sp" />
@@ -89,7 +89,7 @@
                 android:drawableStart="@drawable/ic_key"
                 android:drawablePadding="10sp"
                 android:ems="10"
-                android:hint="Confirmar Contraseña"
+                android:hint="Nueva Contraseña"
                 android:inputType="textPassword"
                 android:padding="10sp" />
          </LinearLayout>
