--- a/app/src/main/res/layout/activity_crear_cuenta_org.xml
+++ b/app/src/main/res/layout/activity_crear_cuenta_org.xml
@@ -7,124 +7,138 @@
     tools:context=".ventanas.CrearCuentaOrg"
     android:padding="16dp">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="Solicitud Organizador"
-                android:textSize="35sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="0.68"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_marginTop="20sp"
-                android:orientation="vertical"
-                android:padding="16sp">
+                android:layout_height="0dp"
+                android:layout_weight="0.08"
+                android:orientation="horizontal">
 
-                <EditText
-                    android:id="@+id/register_username"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/org_symbol"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Nombre Organización"
-                    android:inputType="textPersonName"
-                    android:padding="10sp" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:text="Solicitud Organizador"
+                    android:textSize="35sp" />
 
-                <EditText
-                    android:id="@+id/register_email"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_email"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Correo"
-                    android:inputType="textEmailAddress"
-                    android:layout_marginTop="30sp"
-                    android:padding="10sp" />
+            </LinearLayout>
 
-                <EditText
-                    android:id="@+id/register_password"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_key"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Contraseña"
-                    android:inputType="textPassword"
-                    android:layout_marginTop="30sp"
-                    android:padding="10sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="0.73"
+                android:orientation="vertical">
 
-                <EditText
-                    android:id="@+id/register_confirmPassword"
-                    android:layout_width="255dp"
-                    android:layout_height="45dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30sp"
-                    android:background="@drawable/custom_input"
-                    android:drawableStart="@drawable/ic_key"
-                    android:drawablePadding="10sp"
-                    android:ems="10"
-                    android:hint="Confirmar Contraseña"
-                    android:inputType="textPassword"
-                    android:padding="10sp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:orientation="vertical"
+                    android:padding="16sp">
+
+                    <EditText
+                        android:id="@+id/register_username"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/org_symbol"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Nombre Organización"
+                        android:inputType="textPersonName"
+                        android:padding="10sp" />
+
+                    <EditText
+                        android:id="@+id/register_email"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30sp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_email"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Correo"
+                        android:inputType="textEmailAddress"
+                        android:padding="10sp" />
+
+                    <EditText
+                        android:id="@+id/register_password"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30sp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_key"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Contraseña"
+                        android:inputType="textPassword"
+                        android:padding="10sp" />
+
+                    <EditText
+                        android:id="@+id/register_confirmPassword"
+                        android:layout_width="255dp"
+                        android:layout_height="45dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="30sp"
+                        android:background="@drawable/custom_input"
+                        android:drawableStart="@drawable/ic_key"
+                        android:drawablePadding="10sp"
+                        android:ems="10"
+                        android:hint="Confirmar Contraseña"
+                        android:inputType="textPassword"
+                        android:padding="10sp" />
+
+                        <CheckBox
+                            android:id="@+id/checkBoxTyC"
+                            android:layout_marginTop="15sp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/terminosApp"
+                            android:justificationMode="inter_word"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="30sp"
+                android:layout_weight="0.2"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/bttnCrearCuentaOrg"
+                    android:layout_width="257sp"
+                    android:layout_height="60sp"
+                    android:background="@drawable/button_organizador"
+                    android:text="SOLICITAR CUENTA"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/bttnVolver"
+                    android:layout_width="243dp"
+                    android:layout_height="38dp"
+                    android:layout_marginTop="20sp"
+                    android:background="@drawable/button_organizador"
+                    android:text="VOLVER"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="30sp"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:orientation="vertical">
 
-            <Button
-                android:id="@+id/bttnCrearCuentaOrg"
-                android:layout_width="257sp"
-                android:layout_height="60sp"
-                android:background="@drawable/button_organizador"
-                android:textColor="@color/white"
-                android:text="SOLICITAR CUENTA" />
-
-            <Button
-                android:id="@+id/bttnVolver"
-                android:layout_width="243dp"
-                android:layout_height="38dp"
-                android:layout_marginTop="20sp"
-                android:textColor="@color/white"
-                android:background="@drawable/button_organizador"
-                android:text="VOLVER" />
-
-        </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
