--- a/app/src/main/res/layout/tarjeta_usuarios.xml
+++ b/app/src/main/res/layout/tarjeta_usuarios.xml
@@ -38,14 +38,26 @@
             android:gravity="center">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/nombreUsuario"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="[USUARIO]"
+                    android:textSize="25sp">
+
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="15sp"
+                    android:id="@+id/correoUsuario"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="[CORREO]"
                     android:textSize="25sp">
 
                 </TextView>
